--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,14 @@ header {
   font-weight: bold;
 }
 
+div {
+    background-color: green;
+    height: 50px;
+    width: 50px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 footer {
   position: fixed;
   bottom: 0;
