--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@ body {
   height: 100%;
   text-align: center;
   font-family: Arial, Helvetica, sans-serif;
+  background-color: rgb(127, 204, 255);
 }
 
 .cabeceraypie {
@@ -13,14 +14,20 @@ header {
   padding-top: 2em;
   padding-bottom: 2em;
   font-weight: bold;
+  margin-bottom: 1em;
 }
 
 div {
-    background-color: green;
+    background-color: rgb(80, 214, 80);
     height: 50px;
     width: 50px;
     margin-left: auto;
     margin-right: auto;
+}
+
+button {
+    position: relative;
+    top: 60px;
 }
 
 footer {
