--- a/styles.css
+++ b/styles.css
@@ -18,16 +18,24 @@ header {
 }
 
 div {
-    background-color: rgb(80, 214, 80);
-    height: 50px;
-    width: 50px;
-    margin-left: auto;
-    margin-right: auto;
+  background-color: rgb(80, 214, 80);
+  height: 250px;
+  width: 250px;
+  border: solid black;
+  /* Shaping a circle with this property. */
+  border-radius: 50%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+p {
+  padding-top: 1em;
+  font-size: larger;
 }
 
 button {
-    position: relative;
-    top: 60px;
+  position: relative;
+  top: 50px;
 }
 
 footer {
