--- a/styles.css
+++ b/styles.css
@@ -13,14 +13,15 @@ body {
 header {
   padding-top: 2em;
   padding-bottom: 2em;
+  font-size: larger;
   font-weight: bold;
   margin-bottom: 1em;
 }
 
 div {
   background-color: lightgreen;
-  height: 250px;
-  width: 250px;
+  height: 180px;
+  width: 180px;
   border: solid black;
   /* Shaping a circle with this property. */
   border-radius: 50%;
@@ -33,9 +34,8 @@ div {
 }
 
 p {
-  color: black;
   padding-top: 1em;
-  font-size: larger;
+  font-size: 16px;
 }
 
 .rojo {
@@ -51,5 +51,20 @@ footer {
   position: fixed;
   bottom: 0;
   font-size: xx-small;
+  padding-top: 1em;
+  padding-bottom: 1em;
   width: 100%;
+}
+
+@media only screen and (min-width: 500px) {
+  header {
+    padding-top: 3em;
+    padding-bottom: 3em;
+    font-size: xx-large;
+  }
+
+  div {
+    height: 280px;
+    width: 280px;
+  }
 }
